--- a/css/estilos.css
+++ b/css/estilos.css
@@ -177,6 +177,7 @@ justify-content: center;
 align-items: center;
 }
 .grid{
+    overflow: hidden;
     border: 3px solid grey;
     padding: 2 rem;
     min-height: 300px;
@@ -197,6 +198,16 @@ align-items: center;
 
     justify-content: stretch;
     align-content: stretch;
+}
+
+.grid img:hover{
+    transform: scale(1.3);
+}
+
+.grid img{
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s ease;
 }
     .grid__hijo--1{
         grid-area: ele1;
