--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -39,3 +39,27 @@ h1{ text-align:center;
     font-weight: bold;
 
 }
+
+
+.videos{color: indianred;
+    font-style: italic;
+
+font-weight: bold;
+font-size:large}
+
+.animaciones {
+    animation-name: efecto;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-delay: 5s;
+    animation-direction: alternate;
+    }
+    
+    
+    @keyframes efecto {
+        from{ opacity: 1;
+        }
+        to{ opacity: 0;
+        transform: translate(100px);}
+        
+    }
