--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -40,6 +40,16 @@ h1{ text-align:center;
 
 }
 
+.servicios{
+    color: indigo;
+    font-style: normal;
+    text-decoration-line: underline;
+    text-shadow: #474747;
+}
+
+
+
+
 
 .videos{color: indianred;
     font-style: italic;
@@ -63,3 +73,4 @@ font-size:large}
         transform: translate(100px);}
         
     }
+
