--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,52 @@
     justify-content: center;
     text-align: center;
     padding: 16px; }
+
+.secciong {
+  width: 100%; }
+  .secciong .titulo {
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    color: lightcoral;
+    grid-area: 1 / 1 / 3 / 3;
+    background-image: linear-gradient(45deg, #FDF2E9 #FADBD8);
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .secciong .grid {
+    overflow: hidden;
+    border: 3px solid grey;
+    padding: 2 rem;
+    min-height: 200px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30% 30% 30%;
+    grid-template-areas: "ele1 ele2" "ele3 ele4" "ele5 ele6";
+    row-gap: 2rem;
+    column-gap: 2rem;
+    justify-content: stretch;
+    align-content: stretch; }
+    .secciong .grid .grid img:hover {
+      transform: scale(1.3); }
+    .secciong .grid .grid img {
+      width: 85%;
+      height: 85%;
+      transition: transform 0.3s ease; }
+    .secciong .grid .grid__hijo--1 {
+      grid-area: ele1; }
+    .secciong .grid .grid__hijo--2 {
+      grid-area: ele2; }
+    .secciong .grid .grid__hijo--3 {
+      grid-area: ele3; }
+    .secciong .grid .grid__hijo--4 {
+      grid-area: ele4; }
+    .secciong .grid .grid__hijo--5 {
+      grid-area: ele5; }
+    .secciong .grid .grid__hijo--6 {
+      grid-area: ele6; }
+    .secciong .grid .grid__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
