--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,6 +17,7 @@
 
 #sidebar{
 
+
     background-color: lightpink;
     padding: 1rem;
     position: fixed;
@@ -56,3 +57,86 @@
  }
 
  
+ .secciong{
+    width: 100%
+
+   
+}
+
+.secciong__titulo{
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    color: lightcoral;
+    grid-area: 1 / 1 / 3 / 3 ;
+    background-image: linear-gradient( 45deg, #FDF2E9 #FADBD8 );
+    display: flex;
+justify-content: center;
+align-items: center;
+}
+.grid{
+    overflow: hidden;
+    border: 3px solid grey;
+    padding: 2 rem;
+    min-height: 200px;
+    text-align: center;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30% 30% 30%;
+    grid-template-areas: 
+    "ele1 ele2"
+    "ele3 ele4"
+    "ele5 ele6"
+    ;
+
+    row-gap: 2rem;
+    column-gap: 2rem;
+
+
+    justify-content: stretch;
+    align-content: stretch;
+}
+
+.grid img:hover{
+    transform: scale(1.3);
+}
+
+.grid img{
+    width: 85%;
+    height: 85%;
+    transition: transform 0.3s ease;
+}
+    .grid__hijo--1{
+        grid-area: ele1;
+
+    }
+
+    .grid__hijo--2{
+        grid-area: ele2;
+    }
+
+
+    .grid__hijo--3{
+        grid-area: ele3;
+    }
+
+
+    .grid__hijo--4{
+        grid-area: ele4;
+
+    }
+
+    .grid__hijo--5{
+        grid-area: ele5;
+    }
+
+    .grid__hijo--6{
+        grid-area: ele6;
+    }
+
+.grid__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
